--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             <i class="bx bx-error icon-wa"></i>
             <p class="error">Error! Message is empty!</p>
         </div>
+        <div class="name-alert-box">
+            <i class="bx bx-error icon-wa"></i>
+            <p class="error">Error! Name cannot be empty!</p>
+        </div>
         <!--===== HEADER =====-->
         <header class="l-header">
             <nav class="nav bd-grid">
@@ -235,13 +239,12 @@
 
         <!--===== FOOTER =====-->
         <footer class="footer">
-            <p class="footer__title">𝙰𝚢𝚞𝚜𝚑</p>
             <div class="footer__social">
                 <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
             </div>
-            <p>&#169; 2020 copyright all right reserved</p>
+            <p>&#169; 2021 copyright all right reserved</p>
         </footer>
 
 
